2012-11-20  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (fix_trunc<MODEF:mode><SWI48:mode>_sse): Macroize
	insn from fix_trunc<mode>{si,di}_sse using SWI48 mode iterator.
	(peephole2 to avoid vector decoded forms): Macroize peephole2
	using MODEF mode iterator.  Use SWI48 mode iterator instead of SWI48x.

2012-11-20  Uros Bizjak  <ubizjak@gmail.com>

	PR target/19398
	* config/i386/i386.md
	(peephole2 to shorten x87->SSE reload sequences): Remove peephole2.
	* config/i386/i386.h (enum ix86_tune_indices)
	<IX86_TUNE_SHORTEN_X87_SSE>: Remove.
	* config/i386/i386.h (initial_ix86_tune_features): Update.

2012-11-20  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/19398
	* lra-constraints.c (process_alt_operands): Discourage reloads
	through secodnary memory.

2012-11-20  David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/rs6000.md (largetoc_low): Revert.
	(largetoc_low_aix<mode>): New.

2012-11-20  Diego Novillo  <dnovillo@google.com>

	* Makefile.in (tlink.o): Add dependency on VEC_H.

2012-11-20  Diego Novillo  <dnovillo@google.com>

	PR middle-end/55398
	* vec.h (class vec_prefix): Make every field public.
	Rename field alloc_ to alloc_PRIVATE_.
	Rename field num_ to num_PRIVATE_.
	Update all users.
	(class vec<T, A, vl_embed>): Make every field public.
	Rename field pfx_ to pfx_PRIVATE_.
	Rename field data_ to data_PRIVATE_.
	Update all users.
	(class vec<T, A, vl_ptr>): Make every field public.
	Rename field vec_ to vec_PRIVATE_.
	Update all users.

2012-11-20  Kai Tietz  <ktietz@redhat.com>

	PR target/55268
	* i386.c (ix86_mangle_decl_assembler_name): Use
	SUBTARGET_MANGLE_DECL_ASSEMBLER_NAME if defined.
	* cygming.h (TARGET_MANGLE_DECL_ASSEMBLER_NAME): Rename
	to SUBTARGET_MANGLE_DECL_ASSEMBLER_NAME.

2012-11-20  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_expand_call): Emit CLOBBERs in VOIDmode.

2012-11-20  Nick Clifton  <nickc@redhat.com>

	* config/v850/v850.c (F): New function.  Mark the given insn as